LP performance impovement

--- a/photography-portfolio/index.html
+++ b/photography-portfolio/index.html
@@ -4,14 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Preconnect to speed up the connection to the font servers -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">   
+
+    <!-- Preload the CSS file as a stylesheet -->
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" as="style" crossorigin="anonymous">
+
+    <!-- Apply the stylesheet to actually load the fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" crossorigin="anonymous">
+    
     <title>Jiří Macháček</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <script type="module" src="/src/perf.js"></script>
+    <script type="module" src="/src/main.jsx" async></script>
+    <script type="module" src="/src/perf.js" async></script>
   </body>
 </html>
