--- a/photography-portfolio/index.html
+++ b/photography-portfolio/index.html
@@ -1,24 +1,54 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Preconnect to speed up the connection to the font servers -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<head>
+		<meta charset="UTF-8" />
+		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- Preconnect to speed up the connection to the font servers -->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-    <!-- Preload the CSS file as a stylesheet -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" as="style" crossorigin="anonymous">
+		<!-- Preload the CSS file as a stylesheet -->
+		<link
+			rel="preload"
+			href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+			as="style" onload="this.onload=null;this.rel='stylesheet'"
+		/>
 
-    <!-- Apply the stylesheet to actually load the fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet" crossorigin="anonymous">
+		<!-- Preload the LP image as an image -->
+		<!-- <link rel="preload" href="/src/assets/images/that-cheez.webp" as="image"> -->
+
+    <link href="./src/index.css" rel="stylesheet">
     
-    <title>Jiří Macháček</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx" async></script>
-    <script type="module" src="/src/perf.js" async></script>
-  </body>
+		<!-- Preload svg icons -->
+	<link
+		rel="preload"
+		href="./src/assets/icons/fb-icon.svg"
+		as="image"
+		type="image/svg+xml"
+	/>
+	
+    <link
+      rel="preload"
+      href="./src/assets/icons/hamburger-icon.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+    <link
+      rel="preload"
+      href="./src/assets/icons/ig-icon.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+
+		<!-- Apply the stylesheet to actually load the fonts -->
+
+
+		<title>Jiří Macháček</title>
+	</head>
+	<body>
+		<div id="root"></div>
+		<script type="module" src="/src/main.jsx" async></script>
+		<script type="module" src="/src/perf.js" async></script>
+	</body>
 </html>
