loading spinners fix

--- a/photography-portfolio/index.html
+++ b/photography-portfolio/index.html
@@ -46,7 +46,7 @@
 
 		<title>Jiří Macháček</title>
 	</head>
-	<body>
+	<body style="background-color:#101118">
 		<div id="root"></div>
 		<script type="module" src="/src/main.jsx" async></script>
 		<script type="module" src="/src/perf.js" async></script>
