Changed font to Teko

--- a/photography-portfolio/index.html
+++ b/photography-portfolio/index.html
@@ -11,13 +11,13 @@
 		<!-- Preload the CSS file as a stylesheet -->
 		<link
 			rel="preload"
-			href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap"
 			as="style"
 			onload="this.onload=null;this.rel='stylesheet'"
 		/>
 		<noscript>
 			<link
-				href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
+				href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap"
 				rel="stylesheet"
 			/>
 		</noscript>
@@ -38,12 +38,6 @@
 		<link
 			rel="preload"
 			href="./src/assets/icons/ig-icon.svg"
-			as="image"
-			type="image/svg+xml"
-		/>
-		<link
-			rel="preload"
-			href="./src/assets/icons/arrow-back-svgrepo-com.svg"
 			as="image"
 			type="image/svg+xml"
 		/>
