Updated css import

--- a/photography-portfolio/index.html
+++ b/photography-portfolio/index.html
@@ -43,7 +43,7 @@
 		/>
 
 		<!-- Main CSS -->
-		<link href="./src/index.css" rel="stylesheet" />
+		<link href="./src/core/index.css" rel="stylesheet" />
 
 		<title>Jiří Macháček</title>
 	</head>
