added meta tag & robots.txt

--- a/photography-portfolio/index.html
+++ b/photography-portfolio/index.html
@@ -1,55 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- Preconnect to speed up the connection to the font servers -->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Curious about the world seen through a different lens? [Photographer's Name] shares a unique perspective, capturing beauty and emotion in every frame. Explore a gallery where every image tells a story."
+    />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Preconnect to speed up the connection to the font servers -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-		<!-- Preload the CSS file as a stylesheet -->
-		<link
-			rel="preload"
-			href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap"
-			as="style"
-			onload="this.onload=null;this.rel='stylesheet'"
-		/>
-		<noscript>
-			<link
-				href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap"
-				rel="stylesheet"
-			/>
-		</noscript>
+    <!-- Preload the CSS file as a stylesheet -->
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
+    <noscript>
+      <link
+        href="https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap"
+        rel="stylesheet"
+      />
+    </noscript>
 
-		<!-- Preload svg icons -->
-		<link
-			rel="preload"
-			href="./src/assets/icons/fb-icon.svg"
-			as="image"
-			type="image/svg+xml"
-		/>
-		<link
-			rel="preload"
-			href="./src/assets/icons/hamburger-icon.svg"
-			as="image"
-			type="image/svg+xml"
-		/>
-		<link
-			rel="preload"
-			href="./src/assets/icons/ig-icon.svg"
-			as="image"
-			type="image/svg+xml"
-		/>
+    <!-- Preload svg icons -->
+    <link
+      rel="preload"
+      href="./src/assets/icons/fb-icon.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+    <link
+      rel="preload"
+      href="./src/assets/icons/hamburger-icon.svg"
+      as="image"
+      type="image/svg+xml"
+    />
+    <link
+      rel="preload"
+      href="./src/assets/icons/ig-icon.svg"
+      as="image"
+      type="image/svg+xml"
+    />
 
-		<!-- Main CSS -->
-		<link href="./src/core/index.css" rel="stylesheet" />
+    <!-- Main CSS -->
+    <link href="./src/core/index.css" rel="stylesheet" />
 
-		<title>Jiří Macháček</title>
-	</head>
-	<body style="background-color: #101118">
-		<div id="root"></div>
-		<script type="module" src="/src/main.jsx" async></script>
-		<script type="module" src="/src/perf.js" async></script>
-	</body>
+    <title>Jiří Macháček</title>
+  </head>
+  <body style="background-color: #101118">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx" async></script>
+    <script type="module" src="/src/perf.js" async></script>
+  </body>
 </html>
